# Real-Stock-Market-Project-with-Snowflake-dbt-Airflow

./: .env  .env.template  .gitignore  README.md  consumer.py  docker-compose.yml  producer.py  pyproject.toml
dags/: transfer_to_snowflake.py
stock_market/: dbt_project.yml
stock_market/models/silver/: silver_clean_stock_quotes.sql
