[project]
name = "stockmarket"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.42.59",
    "dbt-core>=1.11.6",
    "dbt-snowflake>=1.11.2",
    "kafka-python>=2.3.0",
    "python-dotenv>=1.2.2",
    "requests>=2.32.5",
    "snowflake-connector-python>=4.3.0",
]
